# dmtxplugin-front

./: .gitignore  0001-Fixed-some-code-standard-problems.patch  AUTHORS  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  oob-data-minimum.xml  sample-oobdata.xml  test-exe.sh
src/: Makefile.am  dmtxplugin-front.c  dmtxplugin-front.h  dmtxplugin-gdbus.c  dmtxplugin-gdbus.h  dmtxutil.c  dmtxutil.h  dmtxutils.c  dmtxutils.h  inotify.c  inotify.h  output.txt  service-gdbus.c  symbol.c  symbol.h  test-exe.sh  utils.c  utils.h
