AC_INIT(configure.ac)
AM_INIT_AUTOMAKE(dmtxplugin-front, 0.1)
AC_PREFIX_DEFAULT("/usr")
AM_CONFIG_HEADER(config.h)

CXXFLAGS=""
AC_SUBST(CXXFLAGS)
AC_PROG_CXX
AC_PROG_LIBTOOL
AM_PROG_CC_STDC
AC_HEADER_STDC

AM_MAINTAINER_MODE

PKG_CHECK_MODULES([BLUEZ], [bluez])

AC_PATH_LIBDMTX

AC_PATH_DBUS
AC_PATH_GLIB
AC_PATH_BLUEZ
AC_PATH_GDBUS

AC_OUTPUT([ Makefile
            gdbus/Makefile
	    src/Makefile ])
